# wg-proxy

./: .gitignore  Cargo.toml
azure/: build.sh  host.json
src/: azure_function.rs  exit_node.rs  tun.rs  wg.rs
src/acceptor/: mod.rs  wg_acceptor.rs
src/device/: functional.rs  mod.rs  tun.rs  wg.rs  wg_device.rs
src/support/: mod.rs
src/tunnel/: http.rs  mod.rs  wg.rs
