[package]
name = "wg-proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "azure"
path = "src/azure_function.rs"

[[bin]]
name = "tun"
path = "src/tun.rs"

[[bin]]
name = "wg"
path = "src/wg.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
base64 = "0.22.1"
boringtun = "0.7.0"
bytes = "1.11.1"
futures = "0.3.32"
futures-lite = "2.6.1"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "client", "server"] }
pin-project-lite = "0.2.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tcp_ip = "0.1.10"
tokio = { version = "1.50.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
tokio-stream = "0.1.18"
tun-rs = { version = "1.5.0", features = ["async"]}
